Refactor documentation of Records Added to documentation actions for Records: - Searching by Group id - Searching by Action id
